[package]
name = "ratatui_weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.28.0", features = ["event-stream"] }
futures = "0.3.30"
once_cell = "1.19.0"
ratatui = "0.29.0"
redis = "0.25.4"
reqwest = { version = "0.12.4", features = ["json", "cookies"] }
scraper = "0.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.11"
