[package]
name = "ratatui_weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
crossterm = { version = "0.28.0", features = ["event-stream"] }
dotenv = "0.15.0"
elasticsearch = "8.17.0-alpha.1"
env_logger = "0.11.6"
futures = "0.3.30"
log = "0.4.25"
once_cell = "1.19.0"
ratatui = "0.29.0"
redis = "0.25.4"
reqwest = { version = "0.12.4", features = ["json", "cookies"] }
scraper = "0.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.11"
uuid = { version = "1.12.1", features = ["v4"] }
sha1 = "0.10"
serde-xml-rs = "0.6.0"
urlencoding = "2.1"
rand = "0.9.0"
# openssl = { version = "0.10", features = ["vendored"] }
xml-rs = "0.8.25"
diesel = { version = "2.2.0", features = ["postgres", "r2d2","chrono"] }
# surrealdb = "2.1.4"
# wechat = { path = "vendor/wechat-rs" }
